# c_coral

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.org  compile_commands.json  watch.sh
dockerenv/: Dockerfile
docs/: UndefinedBehavior.md  blocks.md  builtin-types.md  compose.coral  contexts.md  functions.md  module.md  project.md  rcoral.md  scope.md  tuples.md  types.md  why-types.md
emacs/: coral-mode.el
makefiles/: core.Makefile  parser.Makefile
samples/: functions.basic.coral  functions.coral  functions.factorial.coral  functions.multifunc.coral  hello_world.coral  prelude.coral  statements.blocks.coral
samples/basic/: class.coral  collatz.coral  enums.withClasses.coral  error.coral  fizzbuzz.coral  functions.coral  functions.factorial.coral  hello.coral  hello_world.coral  let.coral  module.coral  multifunctions.coral  print.coral  tree.coral  type_inference.coral  unicode.coral
samples/libs/: gmp.coral  pcre.coral
samples/prelude/: array.coral  extern.coral  integer.coral  iterable.coral  string.coral
samples/rcore/: hello.coral  io.coral
samples/shootout/: fasta.2.coral  (+4 more)
samples/shootout-working/: fasta.coral  knuc.coral  monad_transform.coral
src/: CMakeLists.txt  Makefile  ast.cc  ast.cpp  ast.h  ast.hh  codegen-expr.cc  codegen.cc  codegen.hh  codegen.internal.hh  codegenExpr.cc  compiler.cc  compiler.cpp  compiler.hh  concatenator.cc  concatenator.hh  execution.hh  infer.cc  inferTypePass.hh  lexer.hh  lexer.l  lexer_main.cc  main.cc  main.cpp  mainfuncPass.cc  mainfuncPass.hh  parser.yy  parser_main.cc  returnInsertionPass.hh  scope.hh  test.cc  treeprinter.hh  type.cc  type.hh  typeScope.hh
src/analyzers/: ImportResolver.cc  ImportResolver.hh  InferenceApplication.cc  InferenceDeduplication.cc  InferenceEnvironment.cc  InferenceEnvironment.hh  InferenceObjectModel.cc  InferenceObjectModel.hh  InferenceSubstitution.cc  InitFuncPass.cc  InitFuncPass.hh  NameResolver.cc  NameResolver.hh  ReturnInserter.cc  ReturnInserter.hh  TypeResolver.cc  TypeResolver.hh  TypeResultWriter.hh  UnionToTupleWriter.hh  core.hh
src/analyzers/inference/: Application.cc  Builder.cc  Builder.hh  Deduplication.cc  Environment.cc  Environment.hh  ObjectModel.cc  ObjectModel.hh  Substitution.cc
src/analyzers/typegraph/: TypeGraph.cc  TypeGraph.hh  TypeGraphExtensions.hh  constraint.cc  constraint.hh  main.cc  typegraph.py
src/codegen/: LLVMFunctionCompiler.cc  LLVMFunctionCompiler.hh  LLVMJit.cc  LLVMJit.hh  LLVMModuleCompiler.cc  LLVMModuleCompiler.hh  LLVMTypeMap.cc  LLVMTypeMap.hh  __main__.cc  __mainjit__.cc  codegen.cc  codegen.hh  codegenExpr.cc  compiler.cc  jitEngine.cc  jitEngine.hh  main_compile.cc  main_jit.cc  moduleCompiler.cc  moduleCompiler.hh
src/coral_zero/: CMakeLists.txt  main.c0.json  main.cc  zero_ast.hh  zero_json.hh  zero_types.hh
src/core/: __main__.cc  expr.cc  expr.hh  exprVisitor.cc  jsonprinter.cc  jsonprinter.hh  prettyprinter.cc  prettyprinter.hh  treecompare.cc  treeprinter.cc  treeprinter.hh  type.cc  type.hh  utils.hh
src/core2/: .gitignore  Makefile  expr.hh  main.cc  prettyprinter.cc
src/core2/analyzers/: NameResolver.cc  ReturnInserter.cc  ReturnInserter.hh
src/core2/codegen/: LLVMFunctionCompiler.cc  LLVMFunctionCompiler.hh  LLVMModuleCompiler.hh  codegen.cc
src/core2/core/: expr.cc  expr.hh  prettyprinter.cc  prettyprinter.hh
src/core2/parser/: bisonParser.yy  flex.l  flexLexer.cc  flexLexer.l  lexer-internal.hh  lexer.cc  lexer.hh  main.cc  main_parse.cc  main_tokens.cc  parser.cc  parser.hh  stack.hh  tokens.hh
src/core2/parser/parser2/: Makefile  bisonParser.yy  flexLexer.cc  flexLexer.l  main
src/core2/tests/cases/shootout/: fasta.coral  knucleotide.coral  pidigits.coral  regexredux.coral
src/core2/tests/cases/simple/: collatz.coral  factorial.coral  hello_world.coral
src/docs/: TypeInference.md
src/lexer/: lexer.hh
src/lib/: _include_all.cc  fizzbuzz.cc  string.cc
src/libs/: prelude.coral  print.coral  regex.coral  regex_client.coral  string.coral  syncio.coral
src/libs/euler/: problem1.coral
src/libs/other_samples/: life.coral  sokoban.coral
src/libs/shootout_samples/: binarytrees.coral  fannkuch.coral  fasta.coral  nbody.coral  regexredux.coral  reversecomplement.coral
src/parser/: bisonParser.yy  flexLexer.l  lexer-internal.hh  lexer.cc  lexer.hh  main_parse.cc  main_tokens.cc  parser.cc  parser.hh  tokens.hh
src/parsing/: __main__.cc  __main_parse.cc  __main_token.cc  lexer.hh  lexer.l  parse.cc  parser.yy
src/passes/: InferTypesPass.cc  MainFuncPass.cc  ReturnInsertPass.cc  UnclassifyPass.cc
src/tests/: actions.cc  expr.cc  main.cc  type.cc
src/tests/cases/: arrays.coral  prelude.coral  sdl.coral  wip.2.coral  wip.3.coral  wip.coral
src/tests/cases/bugs/: method_name_collision.coral  method_names_and_type_methods.coral  more_method_madness.coral  tuple_addition.coral
src/tests/cases/features/: ifstatements.coral  pcre.coral  polymorphic_functions.coral  returnInsert.coral  scope.coral  struct.coral  typeInference-member.coral  typeInference-parameter.coral  typeInference-return.coral  typeInference.coral
src/tests/cases/simple/: collatz.coral  factorial.coral  fizzbuzz.coral  hello_world.coral  import_1.coral  import_2.coral  tuples-methods.coral  tuples.coral  unicode-strings.coral  while.coral
src/tests/codegen/: test_codegen.cc
src/tests/core/: __main__.cc
src/tests/parsing/: __main__.cc  parser.cc  test_parser.cc
src/tests/runner/: base.hh  codegen.cc  codegen.hh  main_test.cc  parser.cc  parser.hh
src/typegraph/: CMakeLists.txt  README.org  constraints.cc  constraints.hh  instantiate.hh  outputs.hh  solution.cc  solution.hh  substitution.hh  typegraph.cc  typegraph.hh  unify.hh
src/typegraph/tests/: collatz.cc  test_factorial.cc  test_graph.cc  test_method_call.cc  test_tuples.cc  testcase.hh
src/utils/: ansicolor.cc  ansicolor.hh  opts.cc  opts.hh  segvhandler.hh
tests/: enums.2.coral  enums.coral  fizzbuzz.coral  hello_world.coral  if.coral  newlines.coral  precedence.coral  returns.coral  scope.coral  string.coral  tuple.coral
(+34 files in other folders)
